[NumberChip][CSS] Text align fixed

--- a/src/components/NumberChip/NumberChip.css
+++ b/src/components/NumberChip/NumberChip.css
@@ -7,6 +7,7 @@
   background-color: #606060;
   color: #FFFFFF;
   font-size: 32px;
+  text-align: center;
 }
 
 .NumberChip.in-use {
